--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,6 +1,7 @@
 .container {
-  overflow: auto;
-  min-height: 100vh;
+  width: 80%;
+  height: 800px;
+  margin: 0 auto;
   background-image: linear-gradient(
     0.25turn,
     var(--primary-color),
@@ -9,4 +10,42 @@
   color: var(--secondary-color);
   font-family: var(--primary-font);
   padding: 1em;
+  display: grid;
+  grid-template-columns: 2fr 4fr 1fr;
+  grid-template-rows: 1fr 4fr 1fr;
+  grid-gap: 10px;
+}
+
+header {
+  grid-column: 2;
+  grid-row: 1;
+  background-color: gray;
+}
+
+.mapStyle {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.addTreeButton {
+  grid-column: 2;
+  grid-row: 2;
+  width: 100px;
+  height: 100px;
+  background-color: green;
+}
+
+.treeEntryForm {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.twitterFeed {
+  grid-column: 3;
+  grid-row: 1 / 3;
+}
+
+.twitterHashTagButton {
+  grid-column: 1;
+  grid-row: 3;
 }
