--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 80%;
-  height: 800px;
+  height: 900px;
   margin: 0 auto;
   background-image: linear-gradient(
     0.25turn,
@@ -23,6 +23,7 @@ header {
 }
 
 .mapStyle {
+  display: flex;
   grid-column: 2;
   grid-row: 2;
 }
@@ -48,4 +49,35 @@ header {
 .twitterHashTagButton {
   grid-column: 1;
   grid-row: 3;
+}
+
+footer {
+  background-color: #231f20;
+  color: white;
+  grid-column: 1 / 3;
+  grid-row: 3;
+  width: 100%;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+  padding: 1em;
+}
+
+footer a:link {
+  color: white;
+  text-decoration: none;
+}
+footer a:visited {
+  color: white;
+  text-decoration: none;
+}
+footer a:hover {
+  color: white;
+  text-decoration: underline;
+}
+footer a:active {
+  color: white;
+  text-decoration: none;
 }
