--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -2,12 +2,6 @@
   width: 80%;
   height: 900px;
   margin: 0 auto;
-  background-image: linear-gradient(
-    0.25turn,
-    var(--primary-color),
-    var(--secondary-color)
-  );
-  color: var(--secondary-color);
   font-family: var(--primary-font);
   padding: 1em;
   display: grid;
@@ -16,10 +10,24 @@
   grid-gap: 10px;
 }
 
-header {
-  grid-column: 2;
+.WMCALogo {
+  grid-column: 1;
   grid-row: 1;
-  background-color: gray;
+  width: 200px;
+  margin: 1em;
+}
+
+header {
+  grid-column: 1 / 3;
+  grid-row: 1;
+  display: grid;
+  grid-template-columns: 2fr 4fr;
+  background-color: #618b4a;
+  border-radius: 10px;
+}
+
+header h1 {
+  margin-top: 2em;
 }
 
 .mapStyle {
@@ -33,7 +41,14 @@ header {
   grid-row: 2;
   width: 100px;
   height: 100px;
-  background-color: green;
+  background-color: #618b4a;
+  border: none;
+  border-radius: 10px;
+  margin: 1em;
+}
+
+.addTreeButton:hover {
+  background-color: #afbc88;
 }
 
 .addTreeHereButton {
@@ -41,7 +56,14 @@ header {
   grid-row: 2;
   width: 100px;
   height: 100px;
-  background-color: lightgreen;
+  background-color: #618b4a;
+  border: none;
+  border-radius: 10px;
+  margin: 1em;
+}
+
+.addTreeHereButton:hover {
+  background-color: #afbc88;
 }
 
 .treeEntryForm {
@@ -60,7 +82,7 @@ header {
 }
 
 footer {
-  background-color: #231f20;
+  background-color: #40531b;
   color: white;
   grid-column: 1 / 3;
   grid-row: 3;
