Added basic styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #32a4dc;
   --secondary-color: ghostwhite;
-  --primary-font: Courier;
+  --primary-font: Ubuntu;
 }
 
 html {
