--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -42,13 +42,21 @@ header h1 {
   width: 100px;
   height: 100px;
   background-color: #618b4a;
-  border: none;
   border-radius: 10px;
-  margin: 1em;
+  margin: 0 1em;
 }
 
 .addTreeButton:hover {
   background-color: #afbc88;
+}
+
+.addTreeButtonClicked {
+  background-color: #7aa095;
+  border: 5px solid red;
+}
+
+.addTreeButtonNotClicked {
+  border: none;
 }
 
 .addTreeHereButton {
@@ -59,7 +67,7 @@ header h1 {
   background-color: #618b4a;
   border: none;
   border-radius: 10px;
-  margin: 1em;
+  margin: 0 1em;
 }
 
 .addTreeHereButton:hover {
@@ -82,14 +90,17 @@ header h1 {
 }
 
 footer {
-  background-color: #40531b;
+  background-color: #618b4a;
   color: white;
   grid-column: 1 / 3;
   grid-row: 3;
   width: 100%;
+  border-radius: 10px;
 }
 
 footer a {
+  display: flex;
+  justify-content: space-evenly;
   color: white;
   text-decoration: none;
   padding: 1em;
