--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Inter&display=swap');
+
 :root {
   --primary-color: #32a4dc;
   --secondary-color: ghostwhite;
-  --primary-font: Ubuntu;
+  --primary-font: Inter;
 }
 
 html {
@@ -14,8 +16,7 @@ html {
 
 body {
   margin: 0;
-  font-family: "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 .leaflet-container {
