--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -3,11 +3,12 @@
 .container {
   width: 80%;
   height: 900px;
-  margin: 0 auto;
+  margin: auto;
   font-family: var(--primary-font);
   padding: 1em;
   display: grid;
-  grid-template-columns: 2fr 4fr 1fr;
+  grid-template-columns: 30% 50% 25%;
+  /* grid-template-columns: 2fr 4fr 1fr; */
   grid-template-rows: 1fr 4fr 1fr;
   grid-gap: 10px;
 }
@@ -20,7 +21,7 @@
 }
 
 header {
-  grid-column: 1 / 3;
+  grid-column: 1 / 4;
   grid-row: 1;
   display: grid;
   grid-template-columns: 2fr 4fr;
@@ -28,14 +29,13 @@ header {
   border-radius: 10px;
 }
 
-header h1 {
-  margin-top: 2em;
+footer {
+  grid-column: 1 / 4;
+  grid-row: 3;
 }
 
-.mapStyle {
-  display: flex;
-  grid-column: 2;
-  grid-row: 2;
+header h1 {
+  margin-top: 2em;
 }
 
 .addTreeButton {
@@ -83,7 +83,7 @@ header h1 {
 
 .twitterFeed {
   grid-column: 3;
-  grid-row: 1 / 3;
+  grid-row: 2 / 3;
 }
 
 .twitterHashTagButton {
