--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,21 @@ html {
 body {
   margin: 0;
   font-family: 'Inter', sans-serif;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.mapStyle {
+  display: flex;
+  grid-column: 2;
+  grid-row: 2;
 }
 
 .leaflet-container {
-  height: 500px;
-  width: 500px;
+  height: 80vh;
+  width: 39vw;
+}
+
+#impact {
 }
