--- a/src/components/Impact/Impact.module.css
+++ b/src/components/Impact/Impact.module.css
@@ -1,14 +1,25 @@
 .impact {
   background-color: #afbc88;
   border-radius: 0.5em;
-  border-color: rgb(56, 68, 44);
-  border-style: solid;
+  border-color: #38442c;
+  padding: 10px;
+  margin-top: 1em;
 }
 
 p {
   padding: 1em;
   margin-left: 0.2em;
   text-align: center;
+}
+
+.pTreesSoFar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pCo2 {
+  padding-top: 10px;
 }
 
 .emissionCount {
@@ -28,13 +39,14 @@ p {
   border-radius: 10px;
   font-size: 20px;
   font-weight: bold;
-  margin: 10px;
+  margin: 10px auto;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   text-align: center;
   margin-top: 10px;
+  width: 5em;
 }
 
 p {
