--- a/src/components/Impact/Impact.module.css
+++ b/src/components/Impact/Impact.module.css
@@ -11,7 +11,7 @@ p {
   text-align: center;
 }
 
-.emissionCount {
+.jelloHorizontal {
   background-color: whitesmoke;
   text-align: center;
   padding: 15px;
@@ -19,6 +19,8 @@ p {
   font-size: 20px;
   font-weight: bold;
   margin: 10px;
+  width: 5vw;
+  display: inline-block;
 }
 
 .treeCount {
@@ -30,13 +32,42 @@ p {
   font-weight: bold;
   margin: 10px;
   position: relative;
-  display: flex;
+  display: inline-block;
   flex-direction: column;
   justify-content: space-around;
   text-align: center;
   margin-top: 10px;
+  width: 5vw;
 }
 
 p {
   padding: 0 10px;
+}
+
+.animate {
+  animation: jello-horizontal 0.9s both;
+}
+
+@keyframes jello-horizontal {
+  0% {
+    transform: scale3d(1, 1, 1);
+  }
+  30% {
+    transform: scale3d(1.25, 0.75, 1);
+  }
+  40% {
+    transform: scale3d(0.75, 1.25, 1);
+  }
+  50% {
+    transform: scale3d(1.15, 0.85, 1);
+  }
+  65% {
+    transform: scale3d(0.95, 1.05, 1);
+  }
+  75% {
+    transform: scale3d(1.05, 0.95, 1);
+  }
+  100% {
+    transform: scale3d(1, 1, 1);
+  }
 }
