--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,72 +1,144 @@
-footer {
-  background-color: #618b4a;
-  color: white;
-  grid-column: 1 / 3;
-  grid-row: 3;
-  width: 100%;
-  border-radius: 10px;
-  display: grid;
-  grid-template-columns: 55% 45%;
-  grid-template-rows: 1fr 1fr;
+@media only screen and (min-width: 500px) {
+  footer {
+    background-color: #618b4a;
+    color: white;
+    grid-column: 1 / 3;
+    grid-row: 3;
+    width: 100%;
+    border-radius: 10px;
+    display: grid;
+    grid-template-columns: 55% 45%;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  .firstFourLinks {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    align-items: center;
+  }
+
+  .secondFourLinks {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    align-items: center;
+  }
+
+  .socials {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .copyright {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .footerImg {
+    height: 30px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .socialsLabel {
+    padding-right: 20px;
+  }
+
+  footer a {
+    display: flex;
+    /* justify-content: space-evenly; */
+    color: white;
+    text-decoration: none;
+    padding: 1em;
+  }
+
+  footer a:link {
+    color: white;
+    text-decoration: none;
+  }
+  footer a:visited {
+    color: white;
+    text-decoration: none;
+  }
+  footer a:hover {
+    color: white;
+    text-decoration: underline;
+  }
+  footer a:active {
+    color: white;
+    text-decoration: none;
+  }
 }
 
-.firstFourLinks {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  align-items: center;
-}
+@media only screen and (max-width: 499px) {
+  footer {
+    background-color: #618b4a;
+    color: white;
+    width: 100%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
 
-.secondFourLinks {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  align-items: center;
-}
+  .firstFourLinks {
+  }
 
-.socials {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: center;
-}
+  .secondFourLinks {
+  }
 
-.copyright {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-}
+  .socials {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    order: 1;
+  }
 
-.footerImg {
-  height: 30px;
-  margin: 0;
-  padding: 0;
-}
+  .copyright {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    order: 2;
+  }
 
-.socialsLabel {
-  padding-right: 20px;
-}
+  .footerImg {
+    height: 30px;
+    margin: 0;
+    padding: 0;
+  }
 
-footer a {
-  display: flex;
-  /* justify-content: space-evenly; */
-  color: white;
-  text-decoration: none;
-  padding: 1em;
-}
+  .socialsLabel {
+    padding-right: 20px;
+  }
 
-footer a:link {
-  color: white;
-  text-decoration: none;
-}
-footer a:visited {
-  color: white;
-  text-decoration: none;
-}
-footer a:hover {
-  color: white;
-  text-decoration: underline;
-}
-footer a:active {
-  color: white;
-  text-decoration: none;
+  footer a {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    text-decoration: none;
+    padding: 1em;
+  }
+
+  footer a:link {
+    color: white;
+    text-decoration: none;
+  }
+  footer a:visited {
+    color: white;
+    text-decoration: none;
+  }
+  footer a:hover {
+    color: white;
+    text-decoration: underline;
+  }
+  footer a:active {
+    color: white;
+    text-decoration: none;
+  }
 }
