--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Inter&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Inter&display=swap');
 
 @media only screen and (min-width: 1000px) {
   .container {
@@ -28,11 +28,11 @@
     background-color: #618b4a;
     border-radius: 10px;
   }
-
+  /* 
   footer {
     grid-column: 1 / 4;
     grid-row: 3;
-  }
+  } */
 
   header h1 {
     margin-top: 2em;
@@ -83,10 +83,10 @@
     border-radius: 10px;
   }
 
-  footer {
+  /* footer {
     grid-column: 1 / 3;
     grid-row: 4;
-  }
+  } */
 
   header h1 {
     margin-top: 2em;
@@ -129,8 +129,8 @@
     margin: 1em;
   }
 
-  footer {
-  }
+  /* footer {
+  } */
 
   header h1 {
     text-align: center;
