--- a/src/components/Impact/Impact.module.css
+++ b/src/components/Impact/Impact.module.css
@@ -12,8 +12,6 @@ p {
   text-align: center;
 }
 
-.jelloHorizontal {
-
 .pTreesSoFar {
   display: flex;
   flex-direction: column;
@@ -51,7 +49,23 @@ p {
   text-align: center;
   margin-top: 10px;
   width: 5vw;
+}
 
+.jelloHorizontal {
+  background-color: whitesmoke;
+  text-align: center;
+  padding: 15px;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 10px auto;
+  position: relative;
+  display: inline-block;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
+  margin-top: 10px;
+  width: 5vw;
 }
 
 p {
